history: multi select

--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -6,6 +6,7 @@ body {
     font-size: var(--body-font-size);
     font-weight: var(--body-font-weight);
     line-height: var(--body-line-height);
+    background-color: var(--history-background-color);
 }
 
 .layout {
@@ -38,4 +39,21 @@ body {
     padding-left: 48px;
     padding-right: 76px;
     padding-top: 24px;
+}
+
+.customScroller {
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+        border-radius: 6px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgb(108, 108, 108);
+        border: 4px solid var(--history-background-color);
+        border-radius: 6px;
+    }
 }
