--- a/special-pages/pages/history/app/components/Item.module.css
+++ b/special-pages/pages/history/app/components/Item.module.css
@@ -21,7 +21,6 @@
     display: flex;
     gap: 8px;
     align-items: center;
-    border-radius: 5px;
     padding-left: 9px;
     padding-right: 5px;
     position: relative;
@@ -29,6 +28,7 @@
 
 .hover {
     --row-bg: inherit;
+    --row-radius: 5px;
     --row-color: var(--history-text-normal);
     --dots-bg-hover: var(--color-black-at-9);
     --dots-opacity: 0;
@@ -37,6 +37,7 @@
 
     background: var(--row-bg);
     color: var(--row-color);
+    border-radius: var(--row-radius);
 
     &:hover, &:focus-within {
         --dots-opacity: visible;
@@ -60,6 +61,33 @@
         --row-color: var(--color-white-at-84);
         --dots-bg-hover: var(--color-white-at-9);
     }
+}
+
+/**
+ * The following code handles handles the multi-row selections. It's responsible
+ * for ensuring only the first and last elements in a selection have rounded corners.
+ */
+[data-is-selected='true'] .row {
+    border-radius: 0;
+}
+
+[data-is-selected='true']:first-of-type .row,
+[data-is-selected='true']:not([data-is-selected='true'] + [data-is-selected='true']) .row
+{
+    border-top-left-radius: var(--row-radius);
+    border-top-right-radius: var(--row-radius);
+}
+
+[data-is-selected='true']:last-of-type .row,
+[data-is-selected='true']:not(:has(+ [data-is-selected='true'])) .row
+{
+    border-bottom-left-radius: var(--row-radius);
+    border-bottom-right-radius: var(--row-radius);
+}
+
+.favicon {
+    flex-shrink: 0;
+    min-width: 0;
 }
 
 .entryLink {
