fix some layout things

--- a/special-pages/pages/history/app/components/Item.module.css
+++ b/special-pages/pages/history/app/components/Item.module.css
@@ -110,6 +110,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
 
+    @media screen and (min-width: 800px) {
+        flex-shrink: 0;
+    }
+
     &:before {
         content: "- "
     }
