--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -10,8 +10,19 @@ body {
 }
 
 .layout {
+    --sidebar-width: 250px;
+    --main-padding-left: 48px;
+    --main-padding-right: 76px;
+    --windows-scrollbar: 15px;
+
+    &[data-layout-mode="reduced"] {
+        --sidebar-width: 230px;
+        --main-padding-left: 28px;
+        --main-padding-right: 56px;
+    }
+
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: var(--sidebar-width) 1fr;
     grid-template-rows: max-content 1fr;
     grid-template-areas:
             'aside header'
@@ -22,8 +33,8 @@ body {
 }
 .header {
     grid-area: header;
-    padding-left: 48px;
-    padding-right: 76px;
+    padding-left: var(--main-padding-left);
+    padding-right: var(--main-padding-right);
 }
 .search {
     justify-self: flex-end;
@@ -36,24 +47,17 @@ body {
 .main {
     grid-area: main;
     overflow: auto;
-    padding-left: 48px;
-    padding-right: 76px;
+    padding-left: var(--main-padding-left);
+    padding-right: var(--main-padding-right);
     padding-top: 24px;
 }
-
 .customScroller {
     overflow-y: scroll;
-    &::-webkit-scrollbar {
-        width: 12px;
-    }
+    scrollbar-gutter: stable;
+}
 
-    &::-webkit-scrollbar-track {
-        border-radius: 6px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background: rgb(108, 108, 108);
-        border: 4px solid var(--history-background-color);
-        border-radius: 6px;
+[data-platform="windows"] {
+    .customScroller {
+        padding-right: calc(var(--main-padding-right) - var(--windows-scrollbar));
     }
 }
