--- a/special-pages/pages/history/app/components/Item.module.css
+++ b/special-pages/pages/history/app/components/Item.module.css
@@ -1,8 +1,10 @@
 .item {
+
 }
 
 .title {
-    height: 32px;
+    --title-height: 32px;
+    height: var(--title-height);
     width: 100%;
     font-size: var(--title-3-em-font-size);
     font-weight: var(--title-3-em-font-weight);
@@ -17,7 +19,8 @@
 }
 
 .row {
-    height: 28px;
+    --row-height: 28px;
+    height: var(--row-height);
     display: flex;
     gap: 8px;
     align-items: center;
@@ -39,7 +42,7 @@
     color: var(--row-color);
     border-radius: var(--row-radius);
 
-    &:hover, &:focus-within {
+    &:hover {
         --dots-opacity: visible;
         --time-opacity: 0;
         --time-visibility: hidden;
@@ -63,27 +66,30 @@
     }
 }
 
-/**
- * The following code handles handles the multi-row selections. It's responsible
- * for ensuring only the first and last elements in a selection have rounded corners.
- */
-[data-is-selected='true'] .row {
-    border-radius: 0;
+@supports selector(:has(*)) {
+    /**
+     * The following code handles handles the multi-row selections. It's responsible
+     * for ensuring only the first and last elements in a selection have rounded corners.
+     */
+    [data-is-selected='true'] .row {
+        border-radius: 0;
+    }
+
+    [data-is-selected='true']:first-of-type .row,
+    [data-is-selected='true']:not([data-is-selected='true'] + [data-is-selected='true']) .row
+    {
+        border-top-left-radius: var(--row-radius);
+        border-top-right-radius: var(--row-radius);
+    }
+
+    [data-is-selected='true']:last-of-type .row,
+    [data-is-selected='true']:not(:has(+ [data-is-selected='true'])) .row
+    {
+        border-bottom-left-radius: var(--row-radius);
+        border-bottom-right-radius: var(--row-radius);
+    }
 }
 
-[data-is-selected='true']:first-of-type .row,
-[data-is-selected='true']:not([data-is-selected='true'] + [data-is-selected='true']) .row
-{
-    border-top-left-radius: var(--row-radius);
-    border-top-right-radius: var(--row-radius);
-}
-
-[data-is-selected='true']:last-of-type .row,
-[data-is-selected='true']:not(:has(+ [data-is-selected='true'])) .row
-{
-    border-bottom-left-radius: var(--row-radius);
-    border-bottom-right-radius: var(--row-radius);
-}
 
 .favicon {
     flex-shrink: 0;
@@ -99,6 +105,7 @@
     text-overflow: ellipsis;
     text-decoration: none;
     color: inherit;
+    line-height: var(--row-height);
 }
 
 .domain {
@@ -110,7 +117,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
 
-    @media screen and (min-width: 800px) {
+    [data-layout-mode="normal"] & {
         flex-shrink: 0;
     }
 
@@ -124,6 +131,8 @@
     flex-shrink: 0;
     opacity: var(--time-opacity);
     visibility: var(--time-visibility);
+    font-feature-settings: "tnum";
+    font-variant-numeric: tabular-nums;
 }
 
 .dots {
@@ -147,10 +156,6 @@
 
     &:hover {
         background: var(--dots-bg-hover);
-    }
-
-    &:focus-visible {
-        opacity: 1;
     }
 }
 
