--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -13,12 +13,16 @@ body {
     --sidebar-width: 250px;
     --main-padding-left: 48px;
     --main-padding-right: 76px;
-    --windows-scrollbar: 15px;
+    --scrollbar-width: 12px;
 
     &[data-layout-mode="reduced"] {
         --sidebar-width: 230px;
         --main-padding-left: 28px;
         --main-padding-right: 56px;
+    }
+
+    [data-platform="windows"] & {
+        --scrollbar-width: 15px
     }
 
     display: grid;
@@ -51,13 +55,39 @@ body {
     padding-right: var(--main-padding-right);
     padding-top: 24px;
 }
+
 .customScroller {
     overflow-y: scroll;
-    scrollbar-gutter: stable;
+    padding-right: calc(var(--main-padding-right) - var(--scrollbar-width));
 }
 
+/**
+ * Windows has access to newer CSS features for styling the scrollbar
+ */
 [data-platform="windows"] {
     .customScroller {
-        padding-right: calc(var(--main-padding-right) - var(--windows-scrollbar));
+        scrollbar-gutter: stable;
+        scrollbar-width: var(--scrollbar-width);
+        scrollbar-color: var(--history-surface-border-color) var(--history-background-color);
+    }
+}
+
+/**
+ * macOS specific styling to handle dark mode - without this full
+ * override you cannot change the track color :(
+ */
+[data-platform="macos"] {
+    .customScroller {
+        &::-webkit-scrollbar {
+            width: var(--scrollbar-width);
+        }
+        &::-webkit-scrollbar-track {
+            border-radius: 6px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: rgb(108, 108, 108);
+            border: 4px solid var(--history-background-color);
+            border-radius: calc(var(--scrollbar-width) / 2);
+        }
     }
 }
