--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -13,7 +13,7 @@ body {
     --sidebar-width: 250px;
     --main-padding-left: 48px;
     --main-padding-right: 76px;
-    --scrollbar-width: 12px;
+    --scrollbar-width: 18px;
 
     &[data-layout-mode="reduced"] {
         --sidebar-width: 230px;
@@ -68,7 +68,7 @@ body {
     .customScroller {
         scrollbar-gutter: stable;
         scrollbar-width: var(--scrollbar-width);
-        scrollbar-color: var(--history-surface-border-color) var(--history-background-color);
+        scrollbar-color: var(--history-scrollbar-controls-color) var(--history-background-color);
     }
 }
 
@@ -78,16 +78,30 @@ body {
  */
 [data-platform="macos"] {
     .customScroller {
+        --webkit-thumb-color: rgba(136, 136, 136, 0.8);
+
         &::-webkit-scrollbar {
             width: var(--scrollbar-width);
         }
+
         &::-webkit-scrollbar-track {
-            border-radius: 6px;
+            background-color: var(--history-background-color)
         }
+
         &::-webkit-scrollbar-thumb {
-            background: rgb(108, 108, 108);
-            border: 4px solid var(--history-background-color);
+            background-color: var(--webkit-thumb-color);
             border-radius: calc(var(--scrollbar-width) / 2);
+
+            /** faking some padding on the thumb */
+            border: 4px solid var(--history-background-color);
+        }
+
+        &::-webkit-scrollbar-button {
+            display: block;
+            background-color: var(--history-background-color);
+
+            /** a small vertical gap to prevent it touching boundaries */
+            height: 2px;
         }
     }
 }
