--- a/special-pages/pages/history/app/components/Item.module.css
+++ b/special-pages/pages/history/app/components/Item.module.css
@@ -97,15 +97,16 @@
 }
 
 .entryLink {
+    font-size: var(--label-font-size);
+    font-weight: var(--label-font-weight);
+    line-height: var(--row-height);
     white-space: nowrap;
-    font-weight: 510;
     flex-shrink: 1;
     min-width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     text-decoration: none;
     color: inherit;
-    line-height: var(--row-height);
     pointer-events: none;
 }
 
