--- a/special-pages/pages/history/app/components/Header.module.css
+++ b/special-pages/pages/history/app/components/Header.module.css
@@ -1,5 +1,6 @@
 .root {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 8px;
     color: var(--history-text-normal);
@@ -10,6 +11,7 @@
 .controls {
     display: flex;
     gap: 8px;
+    flex-shrink: 0;
 }
 
 .largeButton {
@@ -49,7 +51,13 @@
 }
 
 .search {
-    margin-left: auto;
+    max-width: 238px;
+    width: 100%;
+    flex-shrink: 1;
+    display: flex;
+}
+.form {
+    width: 100%;
 }
 .label {
     color: inherit;
@@ -70,7 +78,7 @@
     }
 }
 .searchInput {
-    width: 238px;
+    width: 100%;
     height: 28px;
     border-radius: 6px;
     border: 0.5px solid var(--history-surface-border-color);
