--- a/special-pages/pages/onboarding/app/components/v3/SingleStep.module.css
+++ b/special-pages/pages/onboarding/app/components/v3/SingleStep.module.css
@@ -51,7 +51,7 @@
 .buttonBarContents {
     display: grid;
     gap: var(--sp-2);
-    grid-template-columns: 1fr min-content min-content;
+    grid-template-columns: 1fr auto auto;
     grid-template-areas: ". dismiss accept";
 
     [data-platform-name="windows"] & {
