--- a/injected/src/features/duckplayer/assets/mobile-video-drawer.css
+++ b/injected/src/features/duckplayer/assets/mobile-video-drawer.css
@@ -71,14 +71,13 @@
     --drawer-padding: 16px;
     --drawer-buffer: 48px;
 
+    height: 100%;
     position: absolute;
     width: 100%;
-    height: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
     .ddg-mobile-drawer-overlay {
-        /* --overlay-background: rgba(255, 255, 255, 0.6); */
         --drawer-background: #333;
         --drawer-color: rgba(255, 255, 255, 0.84);
         --button-background: rgba(255, 255, 255, 0.18);
@@ -92,29 +91,64 @@
     }
 }
 
+.ddg-mobile-drawer-background {
+    background: var(--overlay-background);
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+}
 
 .ddg-mobile-drawer {
     background: var(--drawer-background);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     bottom: -100vh;
+    box-shadow: 0px -4px 12px 0px rgba(0, 0, 0, 0.10), 0px -20px 40px 0px rgba(0, 0, 0, 0.08);
     box-sizing: border-box;
     color: var(--drawer-color);
     left: 0;
     padding: var(--drawer-padding) var(--drawer-padding) calc(var(--drawer-padding) + var(--drawer-buffer));
     position: fixed;
     width: 100%;
-
-    box-shadow: 0px -4px 12px 0px rgba(0, 0, 0, 0.10), 0px -20px 40px 0px rgba(0, 0, 0, 0.08);
 }
 
-.animateIn {
+.animateIn .ddg-mobile-drawer-background {
+    animation: fade-in 300ms ease-out 100ms 1 both;
+}
+
+.animateOut .ddg-mobile-drawer-background {
+    animation: fade-out 300ms ease-out 10ms 1 both;
+}
+
+.animateIn .ddg-mobile-drawer {
     animation: slide-in 300ms cubic-bezier(0.34, 1.3, 0.64, 1) 100ms 1 both;
-
 }
 
-.animateOut {
-    animation: slide-out 300ms cubic-bezier(0.34, 1.3, 0.64, 1) 10ms 1 both;
+.animateOut .ddg-mobile-drawer {
+    animation: slide-out 300ms cubic-bezier(0.34, 1.3, 0.64, 1) 100ms 1 both;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
 
 @keyframes slide-in {
