--- a/injected/src/features/duckplayer/assets/mobile-video-drawer.css
+++ b/injected/src/features/duckplayer/assets/mobile-video-drawer.css
@@ -110,11 +110,22 @@
     box-sizing: border-box;
     color: var(--drawer-color);
     left: 0;
-    padding: var(--drawer-padding) var(--drawer-padding) calc(var(--drawer-padding) + var(--drawer-buffer));
-    padding-left: calc(var(--drawer-padding) + env(safe-area-inset-left));
-    padding-right: calc(var(--drawer-padding) + env(safe-area-inset-right));
     position: fixed;
     width: 100%;
+
+    /* Apply safe-area padding as fallback in case media query below gets removed in the future */
+    padding-top: var(--drawer-padding);
+    padding-right: calc(var(--drawer-padding) + env(safe-area-inset-right));
+    padding-bottom: calc(var(--drawer-padding) + var(--drawer-buffer));
+    padding-left: calc(var(--drawer-padding) + env(safe-area-inset-left));
+}
+
+/* Apply a blanket 18% inline padding on viewports wider than 700px */
+@media screen and (min-width: 700px) {
+    .ddg-mobile-drawer {
+        padding-left: 18%;
+        padding-right: 18%;
+    }
 }
 
 .animateIn .ddg-mobile-drawer-background {
@@ -130,7 +141,7 @@
 }
 
 .animateOut .ddg-mobile-drawer {
-    animation: slide-out 300ms cubic-bezier(0.34, 1.3, 0.64, 1) 100ms 1 both;
+    animation: slide-out 300ms cubic-bezier(0.36, 0, 0.66, -0.3) 100ms 1 both;
 }
 
 @keyframes fade-in {
