--- a/injected/src/features/duckplayer/assets/mobile-video-drawer.css
+++ b/injected/src/features/duckplayer/assets/mobile-video-drawer.css
@@ -128,6 +128,8 @@
     }
 }
 
+/* ANIMATIONS */
+
 .animateIn .ddg-mobile-drawer-background {
     animation: fade-in 300ms ease-out 100ms 1 both;
 }
@@ -142,6 +144,13 @@
 
 .animateOut .ddg-mobile-drawer {
     animation: slide-out 300ms cubic-bezier(0.36, 0, 0.66, -0.3) 100ms 1 both;
+}
+
+@media (prefers-reduced-motion) {
+    .animateIn *,
+    .animateOut * {
+        animation-duration: 0s !important;
+    }
 }
 
 @keyframes fade-in {
