--- a/special-pages/pages/history/styles/history-theme.css
+++ b/special-pages/pages/history/styles/history-theme.css
@@ -1,7 +1,4 @@
 :root {
-    --default-light-bg: var(--color-gray-0);
-    --default-dark-bg: var(--color-gray-85);
-
     /* H1 title */
     --title-font-size: 20px;
     --title-font-weight: 600;
@@ -21,6 +18,11 @@
     --title-3-em-font-size: 15px;
     --title-3-em-font-weight: 590;
     --title-3-em-line-height: 20px;
+}
+
+body {
+    --default-light-background-color: var(--color-gray-0);
+    --default-dark-background-color: var(--color-gray-85);
 }
 
 /* This comes from the application settings */
@@ -47,7 +49,7 @@
 }
 
 [data-theme=light] {
-    --history-background-color: var(--default-light-bg);
+    --history-background-color: var(--default-light-background-color);
     --history-surface-background-color: var(--color-white-at-30);
     --history-surface-border-color: var(--color-black-at-9);
     --history-scrollbar-controls-color: var(--color-black-at-18);
@@ -57,7 +59,7 @@
 }
 
 [data-theme=dark] {
-    --history-background-color: var(--default-dark-bg);
+    --history-background-color: var(--default-dark-background-color);
     --history-surface-background-color: var(--color-black-at-18);
     --history-surface-border-color: var(--color-white-at-12);
     --history-scrollbar-controls-color: var(--color-white-at-18);
