--- a/injected/src/features/duckplayer-native/custom-error/custom-error.css
+++ b/injected/src/features/duckplayer-native/custom-error/custom-error.css
@@ -16,7 +16,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    z-index: 10000;
+    z-index: 1000;
     height: 100vh;
 }
 /* iphone 15 */
@@ -65,6 +65,7 @@
     background-color: var(--background-color);
     display: flex;
     height: 100%;
+    justify-content: center;
     padding: var(--padding);
 }
 
