Onboarding: Prevent welcome message having a negative translateY value

--- a/special-pages/pages/onboarding/app/components/App2.module.css
+++ b/special-pages/pages/onboarding/app/components/App2.module.css
@@ -24,10 +24,10 @@
         transform: translateY(0);
 
         &[data-current="welcome"] {
-            transform: translateY(calc(50vh - 288px));
+            transform: translateY(max(50vh - 288px, 0px));
         }
         &[data-current="getStarted"] {
-            transform: translateY(calc(50vh - 288px));
+            transform: translateY(max(50vh - 288px, 0px));
         }
     }
 
