--- a/special-pages/pages/onboarding/app/components/v3/Heading.module.css
+++ b/special-pages/pages/onboarding/app/components/v3/Heading.module.css
@@ -76,6 +76,8 @@
     mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="40" fill="none"><path fill="%23000" d="M21.627 34.502c-4.4-3.677-14.05-12.309-21.115-22.728-1.63-2.403.911-5.248 3.657-4.457 11.207 3.226 16.613-.79 18.715-3.195.828-.948 1.103-2.221 1.103-3.495L24 0v40l-.013-.497a6.54 6.54 0 0 0-2.36-5.001z"/></svg>');
     mask-position: right var(--sp-8);
     mask-repeat: no-repeat;
+    position: relative;
+    left: 1px; /* nudge it over to handle pixel rounding gaps */
 
     @media (prefers-color-scheme: dark) {
         background: linear-gradient(180deg, #333 0%, rgba(51, 51, 51, 0.72) 100%);
