--- a/special-pages/shared/styles/variables.css
+++ b/special-pages/shared/styles/variables.css
@@ -127,6 +127,12 @@
     --theme-text-secondary-color: var(--color-black-at-60);
     --theme-text-link-color: var(--ddg-color-primary);
 
+    /* Border-radius */
+    --border-radius-lg: 12px;
+    --border-radius-md: 8px;
+    --border-radius-sm: 6px;
+    --border-radius-xs: 4px;
+
     @media (prefers-color-scheme: dark) {
         --theme-background-color: var(--color-gray-95);
 
