--- a/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
+++ b/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
@@ -194,3 +194,18 @@
     font-weight: 600;
     line-height: calc(11 * var(--px-in-rem));
 }
+
+.updatesLink {
+    display: inline-flex;
+    align-items: center;
+    border-bottom: 1px solid currentColor;
+    width: fit-content;
+    text-decoration: none;
+
+    .linkIcon {
+        height: 1rem;
+        width: 1rem;
+        margin-left: var(--sp-1);
+        vertical-align: middle;
+    }
+}
