--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -14,6 +14,7 @@ body {
     --sidebar-width: 250px;
     --main-padding-left: 48px;
     --main-padding-right: 76px;
+    --scrollbar-width: 18px;
 
     &[data-layout-mode="reduced"] {
         --sidebar-width: 230px;
@@ -21,12 +22,15 @@ body {
         --main-padding-right: 36px;
     }
 
+    [data-platform="windows"] & {
+        --scrollbar-width: 15px
+    }
+
     display: grid;
     grid-template-columns: var(--sidebar-width) 1fr;
     grid-template-rows: max-content 1fr;
-    grid-template-areas:
-            'aside header'
-            'aside main';
+    grid-template-areas: 'aside header'
+    'aside main';
     overflow: hidden;
     height: 100vh;
     background-color: var(--history-background-color);
@@ -57,8 +61,63 @@ body {
     grid-area: main;
     overflow: auto;
     padding-left: var(--main-padding-left);
-    padding-right: calc(var(--main-padding-right) - var(--scrollbar-width));
+    padding-right: var(--main-padding-right);
     padding-top: 24px;
+}
+
+/**
+  * The scrollbar is a custom scroller that is used in the main
+  * content area and the sidebar nav.
+ */
+.customScroller {
+    overflow-y: scroll;
+    padding-right: calc(var(--main-padding-right) - var(--scrollbar-width));
+}
+
+/**
+ * Windows has access to newer CSS features for styling the scrollbar
+ */
+[data-platform="windows"] {
+    .customScroller {
+        overflow-y: auto;
+        scrollbar-gutter: stable;
+        scrollbar-width: var(--scrollbar-width);
+        scrollbar-color: var(--history-scrollbar-controls-color) var(--history-background-color);
+    }
+}
+
+/**
+ * macOS specific styling to handle dark mode - without this full
+ * override you cannot change the track color :(
+ */
+[data-platform="macos"] {
+    .customScroller {
+        --webkit-thumb-color: rgba(136, 136, 136, 0.8);
+
+        &::-webkit-scrollbar {
+            width: var(--scrollbar-width);
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: var(--history-background-color)
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--webkit-thumb-color);
+            border-radius: calc(var(--scrollbar-width) / 2);
+
+            /** faking some padding on the thumb */
+            border: 4px solid var(--history-background-color);
+        }
+
+        &::-webkit-scrollbar-button {
+            display: block;
+            background-color: var(--history-background-color);
+
+            /** a small vertical gap to prevent it touching boundaries */
+            height: 2px;
+        }
+    }
 }
 
 .paddedError {
