fix: visual regression test

--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -91,6 +91,7 @@ body {
  * macOS specific styling to handle dark mode - without this full
  * override you cannot change the track color :(
  */
+[data-platform="integration"],
 [data-platform="macos"] {
     .customScroller {
         --webkit-thumb-color: rgba(136, 136, 136, 0.8);
