--- a/special-pages/pages/settings/app/elements/Elements.module.css
+++ b/special-pages/pages/settings/app/elements/Elements.module.css
@@ -52,7 +52,10 @@
 }
 .checkbox {}
 .checkboxText {}
-.checkboxChildren {}
+.checkboxChildren {
+    padding-left: 20px;
+    margin-top: 8px;
+}
 
 
 .text {}
