--- a/special-pages/pages/settings/app/components/Sidebar.module.css
+++ b/special-pages/pages/settings/app/components/Sidebar.module.css
@@ -13,7 +13,6 @@
     line-height: 24px;
     padding: 10px 6px 10px 10px;
 }
-.nav {}
 .item {
     position: relative;
     border-radius: 8px;
@@ -49,13 +48,23 @@
     }
 }
 
-.group + .group {
-    border-top: 1px solid grey;
+.nav {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.group {
+    border-bottom: 1px solid var(--color-black-at-12);
+    padding-bottom: 10px;
 }
 
 .groupHeading {
     display: block;
-    padding: 12px;
+    padding-left: 12px;
+    &:empty {
+        display: contents;
+    }
 }
 
 .link {
